--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,5 +2,183 @@
 @import 'global';
 @import 'fonts';
 
+.header {
+  background-color: #000;
+  padding: 60px;
+}
 
+.header__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+
+.header__nav-list {
+  margin-left: 60px;
+}
+
+.header__nav-item {
+  display: inline-block;
+  + .header__nav-item {
+    margin-left: 40px;
+  }
+}
+
+.header-btn {
+  cursor: pointer;
+  div {
+    width: 60px;
+    height: 2px;
+    background-color: $text;
+    + div {
+      margin-top: 7px;
+    }
+  }
+}
+
+.header__info {
+  display: flex;
+  align-items: center;
+}
+
+.header_shopping {
+  margin-left: 60px;
+  position: relative;
+  span {
+    font-size: 12px;
+    color: #E50012;
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    &::before {
+      content: url(../images/vector.svg);
+      position: absolute;
+      left: -7px;
+      top: -4px;
+    }
+  }
+}
+
+.header__language {
+  margin-left: 60px;
+  a + a {
+    margin-left: 8px;
+  }
+  .header__de {
+    color: rgba(255, 255, 255, 0.3)
+  }
+}
+
+.header__catalog {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__catalog-item {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  padding-left: 50px;
+  padding-bottom: 50px;
+  padding-right: 50px;
+  width: 285px;
+  height: 651px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 52.74%, rgba(17, 13, 13, 0.9) 100%);
+  }
+}
+
+.catalog-item__discount {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  z-index: 1;
+  max-width: 364px;
+  width: 102%;
+  top: 25px;
+  left: -3px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+.discount__amount {
+  font-family: 'MorganiteBold';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.discount__time {
+  font-family: "MADEOuterSansLight";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 12px;
+  span {
+    margin-top: 5px;
+    margin-left: auto;
+    font-family: 'MADEOuterSansBold';
+    font-size: 16px;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
+.catalog-item__title, .catalog-item__genre {
+  position: relative;
+  z-index: 1;
+}
+
+.catalog-item__title {
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.catalog-item__genre {
+  font-family: "MADEOuterSansLight";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 12px;
+  img {
+    margin-left: 8px;
+    margin-bottom: -4px;
+  }
+}
+
+@media (min-width: 1900px) {
+  .header__catalog-item {
+    width: 350px;
+    height: 850px;
+  }
+  .catalog-item__title {
+    font-size: 36px;
+  }
+  .discount__amount {
+    font-size: 56px;
+  }
+  .discount__time  {
+    font-size: 14px;
+    span {
+      font-size: 18px;
+    }
+  }
+}
 
