--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,10 @@
 @import 'fonts';
 
 .header {
+  background-image: url(../images/bg/bg1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #000;
   padding: 60px;
 }
