added border for discount item

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -133,6 +133,10 @@
   }
 }
 
+.discount {
+  border: 1px solid #E50012;
+}
+
 .catalog-item__discount {
   background-repeat: no-repeat;
   background-position: center;
